# grpcQtTask

./: .gitignore  CMakeLists.txt  README.md  client.cpp  main.cpp  server.cpp
include/client/: ClientMainWindow.h
include/grpc/client/: grpcClient.h
include/server/: ServerMainWindow.h
include/udp/client/: AddressRecord.h  ClientMainWindow.h  MyTableModel.h
include/udp/server/: ServerMainWindow.h
protos/: api.proto  common.cmake
src/client/: ClientMainWindow.cpp
src/grpc/client/: grpcClient.cpp
src/grpc/server/: server.cpp
src/server/: ServerMainWindow.cpp
src/udp/client/: AddressRecord.cpp  ClientMainWindow.cpp  MyTableModel.cpp
src/udp/server/: ServerMainWindow.cpp
styles/server/: server_main_window.qss
